refactor: replacing tag selectors (v2) according to rule 3.4 in html-and-css.md

--- a/style.css
+++ b/style.css
@@ -133,8 +133,8 @@ input,button{ /*использование селектора тега для с
 }
 
 /* completed */
-#completed-tasks .task {
-    text-decoration: line-through;
+.completed-tasks .task {
+    text-decoration: line-through
     color: #888;
 }
 
