refactor: separating selectors and properties according to rule 3.8 in html-and-css.md

--- a/style.css
+++ b/style.css
@@ -41,10 +41,12 @@ ul { /* использование селектора тега для сброс
     margin: 0;
     padding: 0px;
 }
-li, h3 { /* использование селектора тега для сброса стилей допустимо правилами задания */
+li,
+h3 { /* использование селектора тега для сброса стилей допустимо правилами задания */
     list-style: none;
 }
-input,button{ /* использование селектора тега для сброса стилей допустимо правилами задания */
+input,
+button { /* использование селектора тега для сброса стилей допустимо правилами задания */
     outline: none;
 }
 .button {
